--- a/webgl/VRsuper/docker-compose.yaml
+++ b/webgl/VRsuper/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.3'
 
 services:
   webgl:
+    container_name: unity-webgl-demo
+    image: unity-webgl-demo
     build: .
     ports:
       - "8080:80"
-    volumes:
-      - ./webgl:/webgl
