--- a/webgl/VRsuper/webgl.conf
+++ b/webgl/VRsuper/webgl.conf
@@ -3,7 +3,7 @@ server {
     server_name  localhost;
 
     location / {
-        root   /webgl/;
+        root   /webgl/VRsuper;
         index  index.html;
     }
 
