--- a/webgl/DockerFile
+++ b/webgl/DockerFile
@@ -1,7 +1,9 @@
-FROM nginx:alpine
-
-WORKDIR /etc/nginx/conf.d
-COPY webgl.conf default.conf
+FROM nginx:stable
 
 WORKDIR /webgl
 COPY webgl/ .
+VOLUME /webgl
+
+WORKDIR /etc/nginx/conf.d
+RUN rm -f default.conf
+COPY webgl.conf webgl.conf
