--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
-version: '3.3'
+version: '3.8'
 
 services:
   webgl:
+    container_name: unity-webgl-demo
+    image: unity-webgl-demo
     build: .
     ports:
       - "8080:80"
-    volumes:
-      - ./webgl:/webgl
