--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,33 +1,28 @@
-# steps:
-#  # Build the container image
-#  - name: 'gcr.io/cloud-builders/docker'
-#    args: [ 'builds', '-t', '${_LAZY_CONFIG}:$COMMIT_SHA', '.' ]
-#  # Push the container image to Artifact Registry
-#  - name: 'gcr.io/cloud-builders/docker'
-#    args: ['push', '${_LAZY_CONFIG}:$COMMIT_SHA']
-#  # Deploy container image to Cloud Run
-#  - name: 'gcr.io/cloud-builders/gcloud'
-#    entrypoint: gcloud
-#    args:
-#    - 'run'
-#    - 'deploy'
-#    - 'docker-repo'
-#    - '--image'
-#    - '${_LAZY_CONFIG}:$COMMIT_SHA'
-#    - '--region'
-#    - 'us-central1'
-#    - '--allow-unauthenticated'
-#    - '--platform'
-#    - 'managed'
-#    - '--port'
-#    - '80'
-# images:
-#  - '${_LAZY_CONFIG}'
+steps:
+ # Build the container image
+ - name: 'gcr.io/cloud-builders/docker'
+   args: [ 'build', '-t', 'us-central1-docker.pkg.dev/${_PROJECT_ID}/webdev-dockers3/lab-cd:$COMMIT_SHA', '.' ]
+ # Push the container image to Artifact Registry
+ - name: 'gcr.io/cloud-builders/docker'
+   args: ['push', 'us-central1-docker.pkg.dev/${_PROJECT_ID}/webdev-dockers3/lab-cd:$COMMIT_SHA']
+ # Deploy container image to Cloud Run
+ - name: 'gcr.io/cloud-builders/gcloud'
+   entrypoint: gcloud
+   args:
+   - 'run'
+   - 'deploy'
+   - 'lab-cd'
+   - '--image'
+   - 'us-central1-docker.pkg.dev/${_PROJECT_ID}/webdev-dockers3/lab-cd:$COMMIT_SHA'
+   - '--region'
+   - 'us-central1'
+   - '--allow-unauthenticated'
+   - '--platform'
+   - 'managed'
+   - '--port'
+   - '8100'
+images:
+ - 'us-central1-docker.pkg.dev/${_PROJECT_ID}/webdev-dockers3/lab-cd'
 
-# substitutions:
-#   # _PROJECT_ID: 'vralive'
-#   # _REPO_NAME: 'docker-repo'
-#   _LAZY_CONFIG: 'us-central1-docker.pkg.dev/vralive/docker-repo/vralive5'
-
-# # options:
-# #   logging: CLOUD_LOGGING_ONLY
+substitutions:
+  _PROJECT_ID: 'vralive'
